--- a/.github/workflows/generate-snake-animation.yml
+++ b/.github/workflows/generate-snake-animation.yml
@@ -1,31 +1,34 @@
-name: Generate Snake Animation
+name: Generate snake animation
 
 on:
-  schedule:
-    - cron: "0 0 * * *" # Executa diariamente à meia-noite
-  workflow_dispatch: # Permite rodar manualmente
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
+
+  workflow_dispatch:
+
+  push:
+    branches:
+    - master
 
 jobs:
   generate:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
+    timeout-minutes: 5
 
     steps:
-      # Clona o repositório
-      - name: Clonar o repositório
-        uses: actions/checkout@v2
-
-      # Configura a cobrinha e gera o SVG
-      - name: Gerar Snake Animation
-        uses: Platane/snk@v2
+      - name: generate snake.svg
+        uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: Henrique-Ambiel
-          outputs: dist/snake.svg
+          github_user_name: ${{ github.repository_owner }}
+          outputs: dist/snake.svg?palette=github-dark
 
-      # Atualiza o arquivo no README
-      - name: Commit e Push
-        run: |
-          git config --local user.name "github-actions[bot]"
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add -A
-          git commit -m "Atualizando animação da cobrinha"
-          git push
+
+      - name: push snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
